--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,500;0,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900;1000&display=swap');
 @import '~react-toastify/dist/ReactToastify.min.css';
 @import '~react-quill/dist/quill.snow.css';
 @import './custom';
