--- a/src/components/Aside/styles.scss
+++ b/src/components/Aside/styles.scss
@@ -1,20 +1,37 @@
 .aside {
+  position: fixed;
   display: flex;
   flex-direction: row;
+  height: 100vh;
+  width: 4.5%;
+  // visibility: hidden;
+
+  border-right: solid 4px #2e373f;
 
   &__body {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 15px;
-    min-width: 5%;
-    min-height: 100vh;
+    height: 100%;
+    width: 100%;
     background-color: #161b21;
-  }
 
-  &__division {
-    background-color: #2e373f;
-    min-height: 100vh;
-    width: 4px;
+    &__options {
+      height: 92%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+
+      padding-top: 3rem;
+
+      &__division {
+        width: 70%;
+        border-bottom: #2e373f 3px solid;
+        border-radius: 1rem;
+      }
+    }
   }
 }
