--- a/src/pages/Posts/Create/styles.scss
+++ b/src/pages/Posts/Create/styles.scss
@@ -12,36 +12,12 @@
 }
 
 .post {
+  border: #2e373f 1px solid;
   background-color: #161b21;
   border-radius: 20px;
   width: 55%;
   padding: 3rem;
   margin: 6rem auto 3rem auto;
-
-  &__header {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    border-bottom: 2px #888d93 solid;
-
-    &__category {
-      margin-bottom: 1.5rem;
-      margin-top: 16px;
-      width: fit-content;
-      padding: 8px;
-      border-radius: 8px;
-      border: solid 2px #888d93;
-    }
-
-    &__lineSpaceTop {
-      margin-top: 2.15rem;
-    }
-
-    &__lineSpaceBottom {
-      margin-bottom: 2.15rem;
-    }
-  }
 }
 
 .text-justify {
