--- a/src/components/Aside/styles.scss
+++ b/src/components/Aside/styles.scss
@@ -4,16 +4,15 @@
   flex-direction: row;
   height: 100vh;
   width: 4.5%;
-  // visibility: hidden;
 
-  border-right: solid 4px #2e373f;
+  border-right: solid 0.25rem #2e373f;
 
   &__body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 15px;
+    padding: 1rem;
     height: 100%;
     width: 100%;
     background-color: #161b21;
