--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -9,12 +9,32 @@
     background-color: #0e1118;
     width: -webkit-fill-available;
     min-height: 100vh;
+
+    @media screen {
+      @media (max-width: 1400px) {
+        padding: 3.5rem 6rem 3.5rem (calc(6rem + 4.5%));
+      }
+
+      @media (max-width: 900px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+    }
   }
 }
 
 .postsGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+
+  @media screen {
+    @media (max-width: 1400px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 900px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
 }
 
 .underline {
