--- a/src/components/PostCard/styles.scss
+++ b/src/components/PostCard/styles.scss
@@ -7,19 +7,23 @@
   border: 3px #23282e solid;
   border-radius: 0.5rem;
 
+  &:hover .postCard__post__title {
+    text-decoration: underline;
+  }
+
   &__icon {
-    min-width: 50px;
+    min-width: 3.125rem;
 
     @media screen {
       @media (max-width: 1400px) {
-        min-width: 40px;
+        min-width: 2.5rem;
       }
     }
   }
 
   &__post {
     &__authorName {
-      max-width: 250px;
+      max-width: 15.625rem;
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
@@ -27,10 +31,10 @@
 
       @media screen {
         @media (max-width: 1800px) {
-          max-width: 150px;
+          max-width: 9.375rem;
         }
         @media (max-width: 1400px) {
-          max-width: 140px;
+          max-width: 8.75rem;
         }
       }
     }
@@ -38,7 +42,7 @@
     &__category {
       background-color: #21262c;
       width: fit-content;
-      padding: 6px;
+      padding: 0.375rem;
       border-radius: 0.5rem;
       border: solid 2px #292e34;
     }
