--- a/src/pages/Auth/Signup/styles.scss
+++ b/src/pages/Auth/Signup/styles.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     background-color: #161b21;
-    border-radius: 20px;
+    border-radius: 1.25rem;
     height: 80%;
     width: 34%;
 
