--- a/src/pages/Categories/Manage/styles.module.scss
+++ b/src/pages/Categories/Manage/styles.module.scss
@@ -14,7 +14,7 @@
 .categories {
   border: #2e373f 2px solid;
   background-color: #161b21;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   width: 55%;
   padding: 3rem;
   margin: 6rem auto 3rem auto;
@@ -33,7 +33,7 @@
 
     border: #2e373f 1px solid;
     background-color: #21262c;
-    border-radius: 8px;
+    border-radius: 0.5rem;
   }
 }
 
@@ -43,10 +43,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 30%;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   border: #2e373f solid 2px;
   background-color: #161b21;
-  padding: 32px;
+  padding: 2rem;
 
   &__close {
     position: absolute !important;
