--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -28,7 +28,7 @@
 }
 
 .underline {
-  padding-bottom: 8px;
+  padding-bottom: 0.5rem;
   display: inline-block;
   border-bottom: 3px solid #4717f6;
 }
