--- a/src/pages/Posts/Create/styles.scss
+++ b/src/pages/Posts/Create/styles.scss
@@ -14,7 +14,7 @@
 .post {
   border: #2e373f 1px solid;
   background-color: #161b21;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   width: 55%;
   padding: 3rem;
   margin: 6rem auto 3rem auto;
