--- a/src/pages/Posts/SeeOne/styles.scss
+++ b/src/pages/Posts/SeeOne/styles.scss
@@ -24,10 +24,10 @@
 
     &__category {
       margin-bottom: 1.5rem;
-      margin-top: 16px;
+      margin-top: 1rem;
       width: fit-content;
-      padding: 8px;
-      border-radius: 8px;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
       border: solid 2px #888d93;
     }
 
